// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus basic.tsx 1`] = `
<div>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(18, 176, 44);"
          />
          <span
            class="ms-status-text"
          >
            success
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round ms-status-processing"
            style="background-color: rgb(0, 110, 255);"
          />
          <span
            class="ms-status-text"
          >
            processing
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(245, 69, 69);"
          />
          <span
            class="ms-status-text"
          >
            error
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(255, 136, 0);"
          />
          <span
            class="ms-status-text"
          >
            warning
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(194, 198, 204);"
          />
          <span
            class="ms-status-text"
          >
            default
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(245, 69, 69);"
          />
          <span
            class="ms-status-text"
          >
            red
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(255, 128, 0);"
          />
          <span
            class="ms-status-text"
          >
            coral
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(201, 168, 3);"
          />
          <span
            class="ms-status-text"
          >
            darkKhaki
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(18, 176, 44);"
          />
          <span
            class="ms-status-text"
          >
            green
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(0, 110, 255);"
          />
          <span
            class="ms-status-text"
          >
            royalBlue
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(8, 173, 167);"
          />
          <span
            class="ms-status-text"
          >
            cadetBlue
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(194, 198, 204);"
          />
          <span
            class="ms-status-text"
          >
            darkGrey
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(11, 113, 163);"
          />
          <span
            class="ms-status-text"
          >
            steelBlue
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(128, 78, 245);"
          />
          <span
            class="ms-status-text"
          >
            blueViolet
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(214, 84, 148);"
          />
          <span
            class="ms-status-text"
          >
            mediumVioletRed
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(214, 84, 148);"
          />
          <span
            class="ms-status-text"
          >
            mediumVioletRed
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(120, 149, 57);"
          />
          <span
            class="ms-status-text"
          >
            yellowGreen
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <div
          class="ms-status"
        >
          <span
            class="ms-status-round"
            style="background-color: rgb(49, 64, 173);"
          />
          <span
            class="ms-status-text"
          >
            darkBlue
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus lightTag.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap: wrap; margin-bottom: -8px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(18, 176, 44); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          success
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(0, 110, 255); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          processing
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(245, 69, 69); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          error
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(255, 136, 0); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          warning
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(230, 232, 235); color: rgb(70, 79, 92);"
      >
        <span
          class="ms-status-text"
        >
          default
        </span>
      </span>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap: wrap; margin-bottom: -8px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(235, 91, 84); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          red
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(240, 145, 48); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          coral
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(202, 181, 74); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          darkKhaki
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(64, 179, 103); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          green
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(82, 139, 255); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          royalBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(36, 174, 169); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          cadetBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(230, 232, 235); color: rgb(70, 79, 92);"
      >
        <span
          class="ms-status-text"
        >
          darkGrey
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(59, 141, 181); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          steelBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(158, 126, 233); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          blueViolet
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(205, 95, 122); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          mediumVioletRed
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(121, 163, 78); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          yellowGreen
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="background-color: rgb(103, 113, 188); color: rgb(255, 255, 255);"
      >
        <span
          class="ms-status-text"
        >
          darkBlue
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus ms-page.tsx 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-body"
      style="padding: 20px;"
    >
      <div
        class="ms-page"
      >
        <div
          class="ms-title-container"
        >
          <div
            class="ms-title"
          >
            <div
              class="ant-skeleton ant-skeleton-element ant-skeleton-active"
            >
              <span
                class="ant-skeleton-input"
                style="height: 28.28px; display: flex;"
              />
            </div>
          </div>
          <div
            class="ant-skeleton ant-skeleton-element ant-skeleton-active"
          >
            <span
              class="ant-skeleton-input"
              style="height: 28.28px; display: flex;"
            />
          </div>
        </div>
        <div
          class="ant-skeleton ant-skeleton-active"
        >
          <div
            class="ant-skeleton-content"
          >
            <h3
              class="ant-skeleton-title"
              style="width: 38%;"
            />
            <ul
              class="ant-skeleton-paragraph"
            >
              <li />
              <li />
              <li
                style="width: 61%;"
              />
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus ms-table.tsx 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-body"
      style="padding: 20px;"
    >
      <div
        class="ms-table"
      >
        <div
          class="ms-table-filter"
        >
          <div
            class="ant-row ant-row-no-wrap ant-row-space-between ant-row-top"
            style="margin: -4px -4px -4px -4px; padding-bottom: 16px;"
          >
            <div
              class="ant-col"
              style="padding: 4px 4px 4px 4px;"
            >
              <div
                class="ant-row ant-row-no-wrap ant-row-top"
                style="margin: -4px -4px -4px -4px;"
              >
                <div
                  class="ant-col"
                  style="padding: 4px 4px 4px 4px;"
                >
                  <form
                    class="ant-form ant-form-horizontal ms-query-form"
                    id="MsTableForm"
                  >
                    <div
                      class="ant-row"
                      style="margin: -4px -4px -4px -4px;"
                    >
                      <div
                        class="ant-col"
                        style="padding: 4px 4px 4px 4px;"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                                    style="min-width: 140px; width: 100%;"
                                  >
                                    <div
                                      class="ant-select-selector"
                                    >
                                      <span
                                        class="ant-select-selection-search"
                                      >
                                        <input
                                          aria-activedescendant="MsTableForm_status_list_0"
                                          aria-autocomplete="list"
                                          aria-controls="MsTableForm_status_list"
                                          aria-haspopup="listbox"
                                          aria-owns="MsTableForm_status_list"
                                          autocomplete="off"
                                          class="ant-select-selection-search-input"
                                          id="MsTableForm_status"
                                          role="combobox"
                                          type="search"
                                          value=""
                                        />
                                      </span>
                                      <span
                                        class="ant-select-selection-placeholder"
                                      >
                                        运行状态
                                      </span>
                                    </div>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-arrow"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-select-suffix"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <input
                      style="display: none;"
                    />
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-col"
              style="padding: 4px 4px 4px 4px;"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only ant-btn-loading"
                    type="button"
                  >
                    <span
                      class="ant-btn-loading-icon"
                    >
                      <span
                        aria-label="loading"
                        class="anticon anticon-loading anticon-spin"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="loading"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                        >
                          <path
                            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
                    type="button"
                  >
                    <span
                      aria-label="column-height"
                      class="anticon anticon-column-height"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="column-height"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M840 836H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm0-724H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM610.8 378c6 0 9.4-7 5.7-11.7L515.7 238.7a7.14 7.14 0 00-11.3 0L403.6 366.3a7.23 7.23 0 005.7 11.7H476v268h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V378h62.8z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only"
                    type="button"
                  >
                    <span
                      aria-label="setting"
                      class="anticon anticon-setting"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="setting"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ms-table-content"
            >
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-small ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="width: 100%; min-width: 100%; table-layout: fixed;"
                          >
                            <colgroup>
                              <col
                                style="width: 90px;"
                              />
                              <col
                                style="width: 90px;"
                              />
                              <col
                                style="width: 90px;"
                              />
                              <col
                                style="width: 90px;"
                              />
                              <col
                                style="width: 120px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                                  title="实例名称"
                                >
                                  实例名称
                                  <span
                                    class="ms-table-column-resizable-handle"
                                  />
                                </th>
                                <th
                                  class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                                  title="IP地址"
                                >
                                  IP地址
                                  <span
                                    class="ms-table-column-resizable-handle"
                                  />
                                </th>
                                <th
                                  class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                                  title="网络类型"
                                >
                                  网络类型
                                  <span
                                    class="ms-table-column-resizable-handle"
                                  />
                                </th>
                                <th
                                  class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                                  title="运行状态"
                                >
                                  运行状态
                                  <span
                                    class="ms-table-column-resizable-handle"
                                  />
                                </th>
                                <th
                                  class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                                  title="操作"
                                >
                                  操作
                                  <span
                                    class="ms-table-column-resizable-handle"
                                  />
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="5"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ms-table-content-footer"
            >
              <div
                class="ant-row ant-row-space-between ant-row-middle"
                style="margin-top: 16px;"
              >
                <div
                  class="ant-col"
                />
                <div
                  class="ant-col"
                >
                  <ul
                    class="ant-pagination ant-pagination-mini"
                  >
                    <li
                      class="ant-pagination-total-text"
                    >
                      共 0 项
                    </li>
                    <li
                      aria-disabled="true"
                      class="ant-pagination-prev ant-pagination-disabled"
                      title="Previous Page"
                    >
                      <button
                        class="ant-pagination-item-link"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-label="left"
                          class="anticon anticon-left"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="left"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                            />
                          </svg>
                        </span>
                      </button>
                    </li>
                    <li
                      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
                      tabindex="0"
                      title="1"
                    >
                      <a
                        rel="nofollow"
                      >
                        1
                      </a>
                    </li>
                    <li
                      aria-disabled="true"
                      class="ant-pagination-next ant-pagination-disabled"
                      title="Next Page"
                    >
                      <button
                        class="ant-pagination-item-link"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </button>
                    </li>
                    <li
                      class="ant-pagination-options"
                    >
                      <div
                        aria-label="Page Size"
                        class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                              aria-autocomplete="list"
                              aria-controls="rc_select_TEST_OR_SSR_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-label="Page Size"
                              aria-owns="rc_select_TEST_OR_SSR_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="rc_select_TEST_OR_SSR"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="10 / page"
                          >
                            10 / page
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus size.tsx 1`] = `
<div>
  <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <span
          class="ant-tag ms-status-tag ms-status-tag-xm"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            迷你尺寸
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <span
          class="ant-tag ms-status-tag ms-status-tag-sm"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            默认尺寸
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <span
          class="ant-tag ms-status-tag ms-status-tag-m"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            中型尺寸
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          class="ant-tag ms-status-tag ms-status-tag-lg"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            大型尺寸
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus tag.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap: wrap; margin-bottom: -8px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(18, 176, 44); background: rgba(18, 176, 44, 0.1);"
      >
        <span
          class="ms-status-text"
        >
          success
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(0, 110, 255); background: rgba(0, 110, 255, 0.1);"
      >
        <span
          class="ms-status-text"
        >
          processing
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(245, 69, 69); background: rgba(245, 69, 69, 0.1);"
      >
        <span
          class="ms-status-text"
        >
          error
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(255, 136, 0); background: rgba(255, 136, 0, 0.1);"
      >
        <span
          class="ms-status-text"
        >
          warning
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
      >
        <span
          class="ms-status-text"
        >
          default
        </span>
      </span>
    </div>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap: wrap; margin-bottom: -8px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(245, 69, 69); background: rgb(254, 241, 240);"
      >
        <span
          class="ms-status-text"
        >
          red
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(255, 128, 0); background: rgb(255, 244, 232);"
      >
        <span
          class="ms-status-text"
        >
          coral
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(201, 168, 3); background: rgb(255, 251, 232);"
      >
        <span
          class="ms-status-text"
        >
          darkKhaki
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(18, 176, 44); background: rgb(236, 249, 238);"
      >
        <span
          class="ms-status-text"
        >
          green
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(0, 110, 255); background: rgb(234, 243, 255);"
      >
        <span
          class="ms-status-text"
        >
          royalBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(8, 173, 167); background: rgb(232, 250, 250);"
      >
        <span
          class="ms-status-text"
        >
          cadetBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
      >
        <span
          class="ms-status-text"
        >
          darkGrey
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(11, 113, 163); background: rgb(234, 243, 247);"
      >
        <span
          class="ms-status-text"
        >
          steelBlue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(128, 78, 245); background: rgb(242, 237, 254);"
      >
        <span
          class="ms-status-text"
        >
          blueViolet
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(214, 84, 148); background: rgb(251, 238, 244);"
      >
        <span
          class="ms-status-text"
        >
          mediumVioletRed
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(214, 84, 148); background: rgb(251, 238, 244);"
      >
        <span
          class="ms-status-text"
        >
          mediumVioletRed
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(120, 149, 57); background: rgb(243, 246, 237);"
      >
        <span
          class="ms-status-text"
        >
          yellowGreen
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom: 8px;"
    >
      <span
        class="ant-tag ms-status-tag"
        style="color: rgb(49, 64, 173); background: rgb(236, 238, 247);"
      >
        <span
          class="ms-status-text"
        >
          darkBlue
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`MsStatus 组件 demo 测试 正确渲染 MsStatus tag-type.tsx 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical"
    style="flex-wrap: wrap; margin-bottom: -24px;"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 24px;"
    >
      <div>
        <h3>
          基础标签
        </h3>
        <span
          class="ant-tag ms-status-tag"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            标签一
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 24px;"
    >
      <div>
        <h3>
          省略文本的标签
        </h3>
        <span
          class="ant-tag ms-status-tag ms-status-ellipsis"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            可省略文本的标签
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 24px;"
    >
      <div>
        <h3>
          带删除的标签
        </h3>
        <span
          class="ant-tag ms-status-tag"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            class="ms-status-text"
          >
            标签
          </span>
          <span
            aria-label="close"
            class="anticon anticon-close ant-tag-close-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-space-item"
      style="margin-bottom: 24px;"
    >
      <div>
        <h3>
          可选中的标签
        </h3>
        <span
          class="ant-tag ant-tag-checkable"
        >
          <span
            class="ms-status-text"
          >
            未选标签
          </span>
        </span>
        <span
          class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
          style="background: rgb(0, 110, 255);"
        >
          <span
            class="ms-status-text"
          >
            选中标签
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        <h3>
          带图标的标签
        </h3>
        <span
          class="ant-tag ms-status-tag"
          style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
        >
          <span
            aria-label="account-book"
            class="anticon anticon-account-book"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="account-book"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v584zM639.5 414h-45c-3 0-5.8 1.7-7.1 4.4L514 563.8h-2.8l-73.4-145.4a8 8 0 00-7.1-4.4h-46c-1.3 0-2.7.3-3.8 1-3.9 2.1-5.3 7-3.2 10.9l89.3 164h-48.6c-4.4 0-8 3.6-8 8v21.3c0 4.4 3.6 8 8 8h65.1v33.7h-65.1c-4.4 0-8 3.6-8 8v21.3c0 4.4 3.6 8 8 8h65.1V752c0 4.4 3.6 8 8 8h41.3c4.4 0 8-3.6 8-8v-53.8h65.4c4.4 0 8-3.6 8-8v-21.3c0-4.4-3.6-8-8-8h-65.4v-33.7h65.4c4.4 0 8-3.6 8-8v-21.3c0-4.4-3.6-8-8-8h-49.1l89.3-164.1c.6-1.2 1-2.5 1-3.8.1-4.4-3.4-8-7.9-8z"
              />
            </svg>
          </span>
          <span>
            <span
              class="ms-status-text"
            >
              已逾期
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
